--- a/index.html
+++ b/index.html
@@ -16,27 +16,26 @@
             <input type="text" id="character__name" placeholder="Name" class="character__name"/>
         </div>
             
-        <div class="input" id="class-1">
-            <input type="button" class="class__clear" value="Clear">
-            <input type="text" list="classes" placeholder="Class" class="class-choices" required/>
-            <input type="number" min="1" max="20" placeholder="Level" class="character__level character__level--full" required/>
+        <div class="input">
+            <input type="button" class="character__classes--clear" value="Clear">
+            <input type="number" class="character__level" min=1 max=20 placeholder=""></input>
+            <select id="character__classes" class="character__classes" required>
+                <option value="blank" selected>Select</option>
+                <option value="artificer">Artificer</option>
+                <option value="barbarian">Barbarian</option>
+                <option value="bard">Bard</option>
+                <option value="cleric">Cleric</option>
+                <option value="druid">Druid</option>
+                <option value="fighter">Fighter</option>
+                <option value="monk">Monk</option>
+                <option value="paladin">Paladin</option>
+                <option value="ranger">Ranger</option>
+                <option value="rogue">Rogue</option>
+                <option value="sorcerer">Sorcerer</option>
+                <option value="warlock">Warlock</option>
+                <option value="wizard">Wizard</option>
+            </select>
         </div>
-
-        <datalist id="classes">
-            <option value="Articifer"></option>
-            <option value="Barbarian"></option>
-            <option value="Bard"></option>
-            <option value="Cleric"></option>
-            <option value="Druid"></option>
-            <option value="Fighter"></option>
-            <option value="Monk"></option>
-            <option value="Paladin"></option>
-            <option value="Ranger"></option>
-            <option value="Rogue"></option>
-            <option value="Sorcerer"></option>
-            <option value="Warlock"></option>
-            <option value="Wizard"></option>
-        </datalist>
     </form>
 
     <script src="dnd-web.js"></script>
